Major Additions:

Minor Additions:


Tweaks:
- Siege Capture events from Dungeons & Sieges tweaked in several ways:
- The option to kill and capture all family members have been locked to very specifically ill intended characters
- The events no longer have a 100% chance of happening on siege victory
- The events can only target counts and above
- Unreformed Pagans can no longer do this


Fixes:
- Ancona now has the proper holdings in 867
- Urbino now has the proper capital in 867
- Fixed some leftover 2.0.1 issues

2.05.1
Major Additions:

Minor Additions:
- Added the [No Pagan Looters] submod for players who would like to disable the continuous Viking raids
- Some icons were slightly altered to look a bit better (mostly ambition icons)

Tweaks:
- Create Israel decision tweaked to include the old CK2+ holy order
- Levies have been changed to use the new system, no more triggered modifier or waiting a day for them to happen
- MA required for Ancient Religions set slightly lower
- Pogrom merged into new expel Jewry decision
- Reduced gold gain from Expel Jewry decision to reflect Pogrom portion of the decision
- Jews can no longer return to a realm they have been expelled from (unless the liege who expelled them no longer rules)

Fixes:
- EU4 Converter now converts Jews properly
- Lord Derpington was not present in Alternate Scenarios. He has taken it upon himself to address this foul transgression
- Added new counties to the EU IV Converter
- Fixed the Hashashin creation event so it wouldn't spam anymore
- Fixed an intermittent CTD that was occuring during a Religious revolt
- Fixed some Crusade based CTDs
- Removed many duplicate entries in various files
- Fixed the straits in Inverness and Lolland
- Re-enabled many nickname triggers that weren't activating
- Fixed some typos with Songhay that were interfering with the character histories
- Fixed the "Crazy Aztecs" issue by removing all the custom Namespaces
- Fixed the CTD that was occurring on dates from 1150 on