@@ -17,6 +17,10 @@ castle = {
 					has_landed_title = d_great_host
 					has_landed_title = d_guardians_of_the_sacred_flame
 					has_landed_title = d_disciples_of_the_old_gods
+					has_landed_title = d_zhayedan_1
+					has_landed_title = d_zhayedan_2
+					has_landed_title = d_anubis
+					has_landed_title = d_horus
 				}
 			}
 		}
@@ -35,9 +39,9 @@ city = {
 	ct_jewish_community_1 = {	
 		potential = {
 			FROM = {
-				NOT = { religion_group = judaism_group }
+				NOT = { religion_group = jewish_group }
 			}
-			NOT = { religion_group = judaism_group }
+			NOT = { religion_group = jewish_group }
 		}
 		trigger = {
 			always = no
@@ -53,9 +57,9 @@ city = {
 		upgrades_from = ct_jewish_community_1
 		potential = {
 			FROM = {
-				NOT = { religion_group = judaism_group }
+				NOT = { religion_group = jewish_group }
 			}
-			NOT = { religion_group = judaism_group }
+			NOT = { religion_group = jewish_group }
 		}		
 		trigger = {
 			always = no
@@ -71,9 +75,9 @@ city = {
 		upgrades_from = ct_jewish_community_2
 		potential = {
 			FROM = {
-				NOT = { religion_group = judaism_group }
+				NOT = { religion_group = jewish_group }
 			}
-			NOT = { religion_group = judaism_group }
+			NOT = { religion_group = jewish_group }
 		}		
 		trigger = {
 			always = no
