@@ -321,12 +321,36 @@ NDiplomacy = {
 	RETRACT_VASSAL_INTERACTION_PRESTIGE = 0,
 	RETRACT_VASSAL_INTERACTION_THRESHOLD_FOR_NO = 25,
 	RETRACT_VASSAL_INTERACTION_THRESHOLD_FOR_YES = 75,
+	
+	ASK_FOR_MONEY_INTERACTION_MONEY = 0,
+	ASK_FOR_MONEY_INTERACTION_PIETY = 100,
+	ASK_FOR_MONEY_INTERACTION_PRESTIGE = 0,
+	ASK_FOR_MONEY_INTERACTION_THRESHOLD_FOR_NO = 50,
+	ASK_FOR_MONEY_INTERACTION_THRESHOLD_FOR_YES = 150,
+	
+	ASK_FOR_CLAIM_INTERACTION_MONEY = 0,
+	ASK_FOR_CLAIM_INTERACTION_PIETY = 100,
+	ASK_FOR_CLAIM_INTERACTION_PRESTIGE = 0,
+	ASK_FOR_CLAIM_INTERACTION_THRESHOLD_FOR_NO = 50,
+	ASK_FOR_CLAIM_INTERACTION_THRESHOLD_FOR_YES = 150,
+	
+	ASK_FOR_CRUSADE_INTERACTION_MONEY = 0,
+	ASK_FOR_CRUSADE_INTERACTION_PIETY = 500,
+	ASK_FOR_CRUSADE_INTERACTION_PRESTIGE = 0,
+	ASK_FOR_CRUSADE_INTERACTION_THRESHOLD_FOR_NO = 50,
+	ASK_FOR_CRUSADE_INTERACTION_THRESHOLD_FOR_YES = 150,
+	
+	NOMINATE_BISHOP_TO_POPE_INTERACTION_MONEY = 50,
+	NOMINATE_BISHOP_TO_POPE_INTERACTION_PIETY = 30,
+	NOMINATE_BISHOP_TO_POPE_INTERACTION_PRESTIGE = 0,
+	NOMINATE_BISHOP_TO_POPE_INTERACTION_THRESHOLD_FOR_NO = 50,
+	NOMINATE_BISHOP_TO_POPE_INTERACTION_THRESHOLD_FOR_YES = 150
 },
 
 NCharacter = {
 	MAX_AGE_BEFORE_BETROTHAL_BREAKS = 20,
-	NOMINATE_CROWN_BISHOP_PIETY_COST = 15,
-	NOMINATE_CROWN_BISHOP_REL_AUTHORITY_CHANGE = -0.01,
+	NOMINATE_CROWN_BISHOP_PIETY_COST = 15, 					-- OBSOLETE
+	NOMINATE_CROWN_BISHOP_REL_AUTHORITY_CHANGE = -0.01, -- OBSOLETE
 	WRONG_GOV_FORM_TAX_MOD = -0.5,
 	CHANGE_SUCC_LAW_YEARS = 10,						-- Rulers must have reigned this long before they can change succession laws
 	CHANGE_AMBITION_YEARS = 3,						-- Delay between being able to pick a new ambition of plot after cancelling
@@ -349,7 +373,8 @@ NCharacter = {
 	PORTRAIT_ADULT_FEMALE_AGE_THRESHOLD = 16,		-- Female child to adult age portrait switch
 	PORTRAIT_MID_AGE_THRESHOLD = 30,				-- Middle age switch for character portraits
 	PORTRAIT_OLD_AGE_THRESHOLD = 50,				-- Old age switch for character portraits
-	AGE_OF_ADULTHOOD = 16,							-- Can rule at this age. Also determines when a proper portrait is shown.
+	AGE_OF_ADULTHOOD_MALE = 16,						-- Male can rule at this age. 
+	AGE_OF_ADULTHOOD_FEMALE = 16,					-- Female can rule at this age.
 	AGE_OF_MARRIAGE_MALE = 16,						-- Male allowed to marry at this age.
 	AGE_OF_MARRIAGE_FEMALE = 16,					-- Female allowed to marry at this age.
 	MAX_CHILD_BIRTH_AGE = 45,						-- Female menopause age.
@@ -357,6 +382,10 @@ NCharacter = {
 	BASE_NR_OF_CHILDREN_PER_COUPLE = 2,
 	EXTRA_NR_OF_CHILDREN_FOR_PLAYERS = 2,
 	COURT_SIZE_CHILD_PENALTY_THRESHOLD = 30,
+	DYNASTY_CONTROLS_HOLY_ORDER_PRESTIGE = 2,		-- Monthly Prestige from a dynasty member as head of a Holy Order (only for counts+ and if the same religion)
+	DYNASTY_CONTROLS_HOLY_ORDER_PIETY = 1,			-- Monthly Piety from a dynasty member as head of a Holy Order (only for counts+ and if the same religion)
+	DYNASTY_CONTROLS_RELIGIOUS_HEAD_PRESTIGE = 2,	-- Monthly Prestige from a dynasty member as head of a religion (only for counts+ and if the same religion)
+	DYNASTY_CONTROLS_RELIGIOUS_HEAD_PIETY = 1,		-- Monthly Piety from a dynasty member as head of a religion (only for counts+ and if the same religion)	
 	NATURAL_DEATH_CHANCE_AGE_0 = 0,					-- Natural deaths per decade out of 10000 people: Age 0-9
 	NATURAL_DEATH_CHANCE_AGE_10 = 0,				-- Natural deaths per decade out of 10000 people: Age 10-19
 	NATURAL_DEATH_CHANCE_AGE_20 = 0,				-- Natural deaths per decade out of 10000 people: Age 20-29
@@ -369,6 +398,9 @@ NCharacter = {
 	NATURAL_DEATH_CHANCE_AGE_90 = 4000,				-- Natural deaths per decade out of 10000 people: Age 90-99
 	NATURAL_DEATH_CHANCE_AGE_100 = 8160,			-- Natural deaths per decade out of 10000 people: Age 100+
 	FERTILITY_BASE_MULT = 0.50,						-- Base fertility multiplier to adjust the base chance of impregnation
+	SECONDARY_SPOUSE_FERTILITY_MULT = 0.5,			-- Applied to fertility of secondary spouses and concubines
+	MATERNITY_DEATH_CHANCE = 0.03,					-- Chance of the mother dying in labor
+	INFANT_DEATH_CHANCE = 0.03						-- Chance of stillbirth / death at birth	
 },
 
 NTitle = {
@@ -460,6 +492,8 @@ NTitle = {
 	REQ_KINGDOMS_FOR_EMPIRE_CREATION = 3, 			-- Number of held kingdoms required to create an Empire (for rulers who are not already emperors)
 	TITULAR_TITLE_CREATION_COST_MULT = 1,			-- Titular titles are more expensive to create
 	ENFORCE_ONE_OF_EACH_HOLDING = 1,				-- Require players to build at least one City, Temple and Castle in each province
+	MAX_REPUBLIC_COUNTIES_IN_REALM = 0.1,		-- 10% of a feudal realm is allowed to be under vassal republics (affects title grants)
+	MAX_THEOCRACY_COUNTIES_IN_REALM = 0.1,		-- 10% of a feudal realm is allowed to be under vassal theocracies/bishoprics (affects title grants)	
 
 -- Title creation and usurpation requirements	
 	DEJURE_COUNTY_LIMIT_TO_CREATE = 0.6,			-- Fraction of de jure counties that you must control to create a non-imperial title
@@ -473,24 +507,35 @@ NReligion = {
 	AUTHORITY_FROM_CHURCH_LOYALIST = 0.005,
 	CREATE_ANTIPOPE_PRESTIGE_COST = 2000,
 	CREATE_ANTIPOPE_AUTHORITY_LOSS = 0.2,
-	ANTIPOPE_MONTHLY_AUTHORITY_LOSS = 0.001,
 	POPE_DIPLO_TO_AUTHORITY_DIV = 10000,
 	EXCOM_MIN_AUTHORITY = 0.4,
 	INVASION_MIN_AUTHORITY = 0.5,
 	KINGDOM_CREATION_PIETY_COST = 50,
 	EMPIRE_CREATION_PIETY_COST = 100,
 	CRUSADE_AUTHORITY_COST = 0.05,
-	ORTHODOX_PENTARCH_MONTHLY_AUTHORITY = 0.001,
 	REFORM_RELIGION_MIN_AUTHORITY = 0.5,			-- Moral authority required to reform a pagan faith
 	REFORM_RELIGION_MIN_HOLY_SITES = 3,				-- Number of holy sites you must control to reform a pagan faith
 	REFORM_RELIGION_PIETY_COST = 750,				-- Piety cost of reforming a pagan faith
 	AUTHORITY_FROM_HOLY_SITE = 0.1,					-- Authority from each holy site held
-	AUTHORITY_FROM_ANTIPOPE = -0.2,					-- Authority from each antipope
+	AUTHORITY_FROM_ANTIPOPE = -0.3,					-- Authority from each antipope
 	AUTHORITY_FROM_RELHEAD_PIETY = 0.02,			-- Authority from each 100 piety of religious head
+	AUTHORITY_FROM_IMMORAL_HEAD = -0.1,				-- Authority from having an immoral religious head	
 	AUTHORITY_FROM_RELHEAD_DIPLOMACY = 0.05,		-- Authority from each 10 diplomacy of religious head
 	AUTHORITY_FROM_RELHEAD_HOLY_SITE = 0.05,		-- Authority from religious head controlling a holy site (does not stack)
 	AUTHORITY_FROM_ORG_RELIGION = 0.2,				-- Authority from being an organized religion
 	DIVINE_BLOOD_FERTILITY_MULT = 0.25,				-- Fertility multiplier in a religious close kin marriage
+	ELECTOR_TITLE_CAMPAIGN_FUND_FACTOR = 1,			-- The effect of money in the Campaign Fund when the Pope is choosing a new Cardinal (money * factor)
+	ELECTOR_TITLE_OPINION_FACTOR = 3.5,
+	ELECTOR_TITLE_REALM_POWER_FACTOR = 0.1,
+	ELECTOR_TITLE_CULTURE_GROUP_FACTOR = 50,
+	ELECTOR_TITLE_CULTURE_FACTOR = 200,
+	ELECTOR_TITLE_LEARNING_FACTOR = 2,
+	ELECTOR_TITLE_PIETY_FACTOR = 0.1,
+	ELECTOR_TITLE_AGE_FACTOR = 2,
+	ELECTOR_TITLE_AT_CAPITAL_FACTOR = 100,
+	ELECTOR_FAMOUS_DYNASTY_FACTOR = 1,
+	ELECTOR_TRAITS_FACTOR = 1.0,					-- Effect of personality traits that the church likes
+	HERESY_TAKEOVER_PROVINCES = 5					-- The number of provinces a heresy needs MORE than the current norm for it to become the new Orthodoxy	
 },
 
 NEconomy = {
@@ -568,10 +613,14 @@ NMilitary = {
 	NUMBER_OF_TROOPS_PER_GALLEY = 100,				-- Number of men each galley can hold
 	FRIENDLY_TERRITORY_LEVY_RETURN_PERCENT = 1.0,	-- Percent of subunit that returns to levy when unit is disbanded in friendly territory
 	OTHER_TERRITORY_LEVY_RETURN_PERCENT = 0.5,		-- Percent of subunit that returns to levy when unit is disbanded in non-friendly territory
-	MERCENARY_MAINTENANCE_FACTOR = 3,				-- Maintenance factor for NORMAL mercenary units
+	LEVY_MAINTENANCE_FACTOR = 1.5,					-- General maintenance factor for levy troops
+	HOLDING_LEVY_SIZE_OWNER_MARTIAL_BASE = 0.50,	
+	HOLDING_LEVY_SIZE_OWNER_MARTIAL_MULT = 0.05,	-- Levy size modifier: Each point of the holding owner's Martial skill is multiplied with this and added to HOLDING_LEVY_SIZE_OWNER_MARTIAL_BASE
+	MERCENARY_MAINTENANCE_FACTOR = 3.0,				-- Maintenance factor for NORMAL mercenary units	
 	MERCENARY_VASSAL_MAINTENANCE_FACTOR = 0.5,		-- Maintenance factor for VASSALIZED mercenary units
 	MERCENARY_HIRE_COST_FACTOR = 0.2,				-- Hire cost factor for mercenary units
 	HOLY_ORDER_HIRE_COST_FACTOR = 0.5,				-- Conversion of nominal gold cost to piety cost when hiring Holy Orders
+	HOLY_ORDER_DYNASTY_HIRE_COST_FACTOR = 0.25,		-- Reduction of cost if the Holy Order is controlled by a dynasty member	
 	VASSAL_MERC_HIRE_COST_FACTOR = 0.5,				-- Fraction of nominal hire cost when hiring vassal mercenaries or holy orders
 	MERCENARY_HIRE_DISTANCE_THRESHOLD = 450,		-- Mercs will not be available if the province of origin is more distant from your capital
 	OPINION_WHEN_MARSHAL_INSTEAD_OF_SELF = 25,		-- Below this opinion value a vassal tends to use his marshal instead of himself when someone asks to raise his troops
@@ -579,8 +628,9 @@ NMilitary = {
 	BATTLE_WARSCORE_WORTH = 75,						-- Warscore from battles are multiplied with this value
 	BATTLE_WARSCORE_DEFENDER_MULTIPLIER = 1.00,		-- Defenders wins are multiplied with this value, which also means they get more prestige for a win
 	BATTLE_MINIMUM_WARSCORE = 0.2,					-- Battles below this value(in actual percentage) are removed from warscore calculations
-	MIN_LEVY_RAISE_OPINION_THRESHOLD = -100,		-- Below this opinion value you'll get the least amount of troops possible
+	MIN_LEVY_RAISE_OPINION_THRESHOLD = -25,			-- Below this opinion value you'll get the least amount of troops possible
 	MAX_LEVY_RAISE_OPINION_THRESHOLD = 100,			-- Above this opinion value you'll get the max amount of troops possible
+	MIN_LEVIES_ABOVE_OPINION_THRESHOLD = 0,			-- The minimum percentage of levies that will be provided if opinion is above threshold 	
 	LEVY_PERCENT_BEFORE_CAN_RAISE = 0.2,			-- Needs at least this much % of full levy before we can raise it
 	SIEGE_DAMAGE = 0,								-- Siege attack values are multiplied by this value(when not doing a sally)
 	PERCENT_OF_GARRISON_DETACHED = 0.1,				-- This percent of the garrison is detached from the winning unit of a siege
@@ -610,7 +660,7 @@ NMilitary = {
 	CONTESTED_TITLE_OCCUPIED_WARSCORE_BONUS = 15,	-- Amount of warscore per year since attacker/defender started getting the bonus
 	CONTESTED_TITLE_OCCUPIED_WARSCORE_BONUS_INDEP = 20,	-- Amount of warscore per year since attacker/defender started getting the bonus, for independence wars (can be overridden separately in religion scripts)
 	REVOLTRISK_REDUCTION_PER_YEAR = 1,
-	DIFFERENT_RELIGIONGROUP_SUPPLY_PENALTY = -0.25,	-- Only 75% supply in provinces with different religios group
+	DIFFERENT_RELIGIONGROUP_SUPPLY_PENALTY = -0.25,	-- Only 25% supply in provinces with different religios group
 	MONTHS_UNTIL_REBEL_WIN = 12,					-- Number of days until province is totally conquered by rebels
 	OWN_SETTLEMENT_SUPPLY_BONUS = 0.25,				-- Extra supply from being in home realm
 	NEUTRAL_SETTLEMENT_SUPPLY_BONUS = 0.125,		-- Neutral supply bonus
@@ -758,6 +808,25 @@ NMilitary = {
 	COMMAND_MODIFIER_MARTIAL_MULTIPLIER = 0.05,
 	
 	MAX_RIVER_MOVEMENT_FORT_LEVEL = 10.0,
+	BOTTLENECK_SIZE_MODIFIER = 1.0,
+	BOTTLENECK_DEFENDER_MARTIAL_MODIFIER = 1.0,
+	BOTTLENECK_ATTACKER_MARTIAL_MODIFIER = 1.0,
+	BOTTLENECK_CHANCE_LEADER_CAP = 95,
+	BOTTLENECK_CHANCE_MAX = 100,
+	
+	CAPITAL_COUNTY_VASSAL_COUNT_LEVY_MULT = 1,	-- Used instead of CAPITAL_COUNTY_LEVY_MULT for vassal counts
+	CAPITAL_COUNTY_VASSAL_LEVY_MULT = 1.25,		-- Used instead of CAPITAL_COUNTY_LEVY_MULT for non-count vassals
+	CAPITAL_COUNTY_LEVY_MULT = 1.5,				-- Multiplier to direct levies in the capital county
+	CAPITAL_COUNTY_LIEGE_LEVY_MULT = 1,			-- Multiplier to liege levies in the capital county
+	CAPITAL_DUCHY_VASSAL_LEVY_MULT = 1.15,		-- Used instead of CAPITAL_DUCHY_LEVY_MULT for non-count vassals
+	CAPITAL_DUCHY_LEVY_MULT = 1.25,
+	CAPITAL_DUCHY_LIEGE_LEVY_MULT = 0.75,
+	CAPITAL_KINGDOM_LEVY_MULT = 1,
+	CAPITAL_KINGDOM_LIEGE_LEVY_MULT = 0.5,
+	CAPITAL_EMPIRE_LEVY_MULT = 1,
+	CAPITAL_EMPIRE_LIEGE_LEVY_MULT = 0.35,
+	OUTSIDE_LEVY_MULT = 1,						-- Multiplier to direct levies outside all capital regions
+	OUTSIDE_LIEGE_LEVY_MULT = 0.25				-- Multiplier to liege levies outside all capital regions	
 },
 
 NTechnology = {
@@ -774,7 +843,7 @@ NTechnology = {
 	IDEAL_YEAR_LEVEL_0 = 700, 						-- the chance to get a progress to this level will increase after this date and decrease before it
 	IDEAL_YEAR_LEVEL_8 = 1500,
 	IDEAL_YEAR_AHEAD_PENALTY = -0.2,				-- UNUSED
-	IDEAL_YEAR_AHEAD_PENALTY_INVEST = 0.3,			-- Percent increase in cost pre level ahead of ideal date
+	IDEAL_YEAR_AHEAD_PENALTY_INVEST = 0.4,		-- Percent increase in cost pre level ahead of ideal date
 	
 	PAGAN_HOME_ATTRITION_REMOVAL_LEVEL = 4.0,
 	
@@ -850,10 +919,18 @@ NAI =
 	MARRIAGE_AI_PRESTIGE_VALUE = 0.5,						-- Multiplier for how highly AI values prestige when arranging marriages and evaluating marriage offers
 	MAX_KING_TITLES_TO_CREATE = 0,							-- AI will not seek to create/usurp more King-level titles than this (0 for unlimited)
 	MAX_EMPIRE_TITLES_TO_CREATE = 1,						-- AI will not seek to create/usurp more Empire-level titles than this (0 for unlimited)
-	AI_EMPEROR_CREATES_KINGDOMS = 0,						-- If set to 1, AI Emperors will create King-level titles
+	AI_EMPEROR_CREATES_KINGDOMS = 1,						-- If set to 1, AI Emperors will create King-level titles
+	AI_ALWAYS_CREATES_DUCHIES = 1,							-- If set to 1, AI will always create Duchy titles even if it has Gavelkind etc	
 	AI_ASSAULT_RATIO = 12,									-- AI will launch assaults at this ratio of attackers to defenders
 	HARD_DIFF_AI_ATTRITION = 0.5,							-- AI attrition multiplier at Hard difficulty
 	V_HARD_DIFF_AI_ATTRITION = 0.25,						-- AI attrition multiplier at Very Hard difficulty
+	MINIMUM_IMPRISONED_YEARS = 2,							-- AI will keep a newly imprisoned character locked up at least this long before releasing them (reduced for important characters)
+	BASE_AI_ARMY_SIZE = 10000,								-- Base size that AI will use when forming armies (multiplied by supply tech)
+	DESIRED_CONSORTS = 3,									-- AI will always want at least this many concubines, if they lack sons
+	RAID_MAX_REALM_SIZE = 24,								-- Realms with more holdings than this will never go on Raids
+	RAID_AGGRESSION = 18,									-- General frequency of raids. A LOWER number means more often!
+	RAID_PREP_INV_SPARE_SAME_CULTURE = 1,					-- AI of religions that allow prepared invasions will not raid provinces in their own culture group (to prevent intra-Scandinavian raids)
+	RAID_SPARE_ACCEPTED_RELIGIONS = 1						-- AI will not raid rulers of other religions in the same religion group, unless heresy vs parent religion	
 },
 
 NFrontend = 
@@ -980,7 +1057,7 @@ NRulerDesigner =
 	COST_SAME_RELIGION_OPINION = 0.5,
 	COST_AMBITION_OPINION = 0,
 	COST_GENERAL_OPINION = 0.75,
-	MAX_AGE = 50,
+	MAX_AGE = 60,
 },
 
 }
