@@ -425,6 +425,14 @@ d_hashshashin_modifier = {
 	heavy_infantry = 150
 }
 
+d_bektashi_modifier = {
+	levy_size = 1
+	archers = 150
+	light_infantry = 150
+	heavy_infantry = 350
+	horse_archers = 100
+}
+
 d_jomsvikings_modifier = {
 	levy_size = 1
 	archers = 150
@@ -510,6 +518,103 @@ d_zhayedan_modifier_2 = {
 	levy_size = 1
 	heavy_infantry = 225
 	knights = 175
+}
+
+d_anubis = {
+	pikemen = 200
+	archers = 125
+	horse_archers = 175
+}
+
+d_horus = {
+	pikemen = 200
+	archers = 125
+	horse_archers = 175
+}
+d_immortals_modifier = {
+	levy_size = 6
+	heavy_infantry = 700
+	light_infantry = 300
+	archers = 400
+}
+
+d_zealots_modifier = {
+	levy_size = 6
+	heavy_infantry = 500
+	light_infantry = 400
+	archers = 200
+}
+
+d_holy_sepulchre_modifier = {
+	levy_size = 6
+	heavy_infantry = 600
+	knights = 300
+	archers = 200
+}
+
+d_saint_anthony_modifier = {
+	levy_size = 6
+	heavy_infantry = 500
+	light_cavalry = 200
+	knights = 100
+	archers = 300
+}
+
+d_sky_lords_modifier = {
+	levy_size = 6
+	knights = 100
+	horse_archers = 450
+	light_cavalry = 150
+}
+
+d_spirit_guardians_modifier = {
+	levy_size = 6
+	light_infantry = 500
+	archers = 600
+	pikemen = 200
+}
+
+d_warriors_perun_modifier = {
+	levy_size = 6
+	heavy_infantry = 800
+	light_infantry = 400
+	archers = 400
+}
+
+d_chosen_perkunas_modifier = {
+	levy_size = 6
+	heavy_infantry = 800
+	light_infantry = 400
+	archers = 400
+}
+
+d_sons_kaleva_modifier = {
+	levy_size = 6
+	heavy_infantry = 800
+	light_infantry = 400
+	archers = 400
+}
+
+d_huitzilopochtli_modifier = {
+	levy_size = 6
+	heavy_infantry = 1000
+	light_infantry = 300
+	archers = 200
+}
+
+d_knights_santiago_modifier = {
+	levy_size = 6
+	heavy_infantry = 400
+	knights = 100
+	light_cavalry = 200
+}
+
+d_knights_calatrava_modifier = {
+	levy_size = 6
+	heavy_infantry = 200
+	light_cavalry = 300
+	knights = 100
+	archers = 100
 }
 
 #Persia
