@@ -13,6 +13,7 @@ Tweaks:
 
 
 Fixes:
+- Better Armies and Hardcore modules fixed
 - Ancona now has the proper holdings in 867
 - Urbino now has the proper capital in 867
 - Fixed some leftover 2.0.1 issues
